--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,13 +86,13 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  color: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  background: rgb(var(--foreground-rgb));
 }
 
 a {
